# yew-svg

./: Cargo.toml  index.html  japan.css
src/: japan.rs  main.rs
