[package]
name = "yew-svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3.60"
log = "0.4.6"
wasm-logger = "0.2.0"
yew-router = "0.17"